--- a/gs_manager/templates/server_config/index.html
+++ b/gs_manager/templates/server_config/index.html
@@ -92,7 +92,7 @@
       }
     });
 
-    var socket = io('http://' + document.domain + ':' + location.port);
+    var socket = io('http://' + document.domain + ':' + location.port + '/server_cfgs');
     socket.on('connect', function() {
         console.log('Connected to server');
     });
